Phase3/parser.output
Nonterminals useless in grammar

    obj


Terminals unused in grammar

    KEYWORD_THEN


Rules useless in grammar

  103 obj: elist
  104    | indexed


State 21 conflicts: 1 shift/reduce
State 170 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: parsing

    2 parsing: stmt parsing
    3        | ε

    4 stmt: expr SEMICOLON
    5     | ifstmt
    6     | whilestmt
    7     | forstmt
    8     | returnstmt
    9     | KEYWORD_BREAK SEMICOLON
   10     | KEYWORD_CONTINUE SEMICOLON
   11     | block
   12     | funcdef
   13     | SEMICOLON
   14     | error SEMICOLON

   15 expr: expr '+' expr
   16     | expr '*' expr
   17     | expr '-' expr
   18     | expr '/' expr
   19     | expr '%' expr
   20     | expr GREATER expr
   21     | expr GREATER_EQUAL expr
   22     | expr LESS expr
   23     | expr LESS_EQUAL expr
   24     | expr EQUALS expr
   25     | expr NOT_EQUAL expr
   26     | expr KEYWORD_AND expr
   27     | expr KEYWORD_OR expr
   28     | assignexpr
   29     | term

   30 term: LEFTPARENTHESIS expr RIGHTPARENTHESIS
   31     | '-' expr
   32     | KEYWORD_NOT expr
   33     | INCREMENT lvalue
   34     | lvalue INCREMENT
   35     | DECREMENT lvalue
   36     | lvalue DECREMENT
   37     | primary

   38 $@1: ε

   39 assignexpr: lvalue '=' $@1 expr

   40 primary: lvalue
   41        | call
   42        | objectdef
   43        | LEFTPARENTHESIS funcdef RIGHTPARENTHESIS
   44        | const

   45 lvalue: IDENTIFIER
   46       | KEYWORD_LOCAL IDENTIFIER
   47       | DOUBLECOLON IDENTIFIER
   48       | member

   49 member: lvalue DOT IDENTIFIER
   50       | lvalue LEFTBRACKET expr RIGHTBRACKET
   51       | call DOT IDENTIFIER
   52       | call LEFTBRACKET expr RIGHTBRACKET

   53 call: call LEFTPARENTHESIS elist RIGHTPARENTHESIS
   54     | lvalue callsuffix
   55     | LEFTPARENTHESIS funcdef RIGHTPARENTHESIS LEFTPARENTHESIS elist RIGHTPARENTHESIS

   56 callsuffix: normcall
   57           | methodcall

   58 normcall: LEFTPARENTHESIS elist RIGHTPARENTHESIS

   59 methodcall: DOUBLEDOT IDENTIFIER LEFTPARENTHESIS elist RIGHTPARENTHESIS

   60 elist: exprlist
   61      | ε

   62 exprlist: exprlist COMMA expr
   63         | expr

   64 objectdef: LEFTBRACKET elist RIGHTBRACKET
   65          | LEFTBRACKET indexed RIGHTBRACKET
   66          | LEFTBRACKET RIGHTBRACKET

   67 indexed: indexedelem
   68        | indexedelem COMMA indexed

   69 indexedelem: LEFTBRACE expr COLON expr RIGHTBRACE

   70 $@2: ε

   71 block: LEFTBRACE $@2 blockk RIGHTBRACE

   72 blockk: stmt blockk
   73       | ε

   74 funcname: IDENTIFIER
   75         | ε

   76 funcprefix: KEYWORD_FUNCTION funcname

   77 funcargs: LEFTPARENTHESIS idlist RIGHTPARENTHESIS

   78 funcbody: block

   79 funcdef: funcprefix funcargs funcbody

   80 const: number
   81      | STRING
   82      | KEYWORD_NIL
   83      | KEYWORD_TRUE
   84      | KEYWORD_FALSE

   85 number: "integer constant"
   86       | "real contstant"

   87 idlist: IDENTIFIER ids
   88       | ε

   89 $@3: ε

   90 ids: COMMA IDENTIFIER $@3 ids
   91    | ε

   92 ifstmt: KEYWORD_IF LEFTPARENTHESIS expr RIGHTPARENTHESIS stmt KEYWORD_ELSE stmt
   93       | KEYWORD_IF LEFTPARENTHESIS expr RIGHTPARENTHESIS stmt

   94 whilestart: KEYWORD_WHILE

   95 whilecond: LEFTPARENTHESIS expr RIGHTPARENTHESIS

   96 whilestmt: whilestart whilecond stmt

   97 N: ε

   98 M: ε

   99 forprefix: KEYWORD_FOR LEFTPARENTHESIS elist SEMICOLON M expr SEMICOLON

  100 forstmt: forprefix N elist RIGHTPARENTHESIS N stmt N

  101 returnstmt: KEYWORD_RETURN expr SEMICOLON
  102           | KEYWORD_RETURN SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 19
    '*' (42) 16
    '+' (43) 15
    '-' (45) 17 31
    '/' (47) 18
    '=' (61) 39
    error (256) 14
    "integer constant" <intv> (258) 85
    "real contstant" <floatv> (259) 86
    KEYWORD_IF <stringv> (260) 92 93
    KEYWORD_THEN <stringv> (261)
    KEYWORD_ELSE <stringv> (262) 92
    KEYWORD_WHILE <stringv> (263) 94
    KEYWORD_FOR <stringv> (264) 99
    KEYWORD_FUNCTION <stringv> (265) 76
    KEYWORD_RETURN <stringv> (266) 101 102
    KEYWORD_BREAK <stringv> (267) 9
    KEYWORD_CONTINUE <stringv> (268) 10
    KEYWORD_AND <stringv> (269) 26
    KEYWORD_NOT <stringv> (270) 32
    KEYWORD_OR <stringv> (271) 27
    KEYWORD_LOCAL <stringv> (272) 46
    KEYWORD_TRUE <stringv> (273) 83
    KEYWORD_FALSE <stringv> (274) 84
    KEYWORD_NIL <stringv> (275) 82
    GREATER <stringv> (276) 20
    LESS <stringv> (277) 22
    EQUALS <stringv> (278) 24
    GREATER_EQUAL <stringv> (279) 21
    LESS_EQUAL <stringv> (280) 23
    NOT_EQUAL <stringv> (281) 25
    INCREMENT <stringv> (282) 33 34
    DECREMENT <stringv> (283) 35 36
    STRING <stringv> (284) 81
    IDENTIFIER <stringv> (285) 45 46 47 49 51 59 74 87 90
    LEFTBRACE <stringv> (286) 69 71
    RIGHTBRACE <stringv> (287) 69 71
    LEFTBRACKET <stringv> (288) 50 52 64 65 66
    RIGHTBRACKET <stringv> (289) 50 52 64 65 66
    LEFTPARENTHESIS <stringv> (290) 30 43 53 55 58 59 77 92 93 95 99
    RIGHTPARENTHESIS <stringv> (291) 30 43 53 55 58 59 77 92 93 95 100
    COMMA <stringv> (292) 62 68 90
    SEMICOLON <stringv> (293) 4 9 10 13 14 99 101 102
    COLON <stringv> (294) 69
    DOT <stringv> (295) 49 51
    DOUBLEDOT <stringv> (296) 59
    DOUBLECOLON <stringv> (297) 47
    UMINUS (298)


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    program <stringv> (51)
        on left: 1
        on right: 0
    parsing <stringv> (52)
        on left: 2 3
        on right: 1 2
    stmt <stmt_structt> (53)
        on left: 4 5 6 7 8 9 10 11 12 13 14
        on right: 2 72 92 93 96 100
    expr <expression> (54)
        on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29
        on right: 4 15 16 17 18 19 20 21 22 23 24 25 26 27 30 31 32 39 50 52 62 63 69 92 93 95 99 101
    term <expression> (55)
        on left: 30 31 32 33 34 35 36 37
        on right: 29
    assignexpr <expression> (56)
        on left: 39
        on right: 28
    $@1 (57)
        on left: 38
        on right: 39
    primary <expression> (58)
        on left: 40 41 42 43 44
        on right: 37
    lvalue <expression> (59)
        on left: 45 46 47 48
        on right: 33 34 35 36 39 40 49 50 54
    member <expression> (60)
        on left: 49 50 51 52
        on right: 48
    call <expression> (61)
        on left: 53 54 55
        on right: 41 51 52 53
    callsuffix <calls> (62)
        on left: 56 57
        on right: 54
    normcall <calls> (63)
        on left: 58
        on right: 56
    methodcall <calls> (64)
        on left: 59
        on right: 57
    elist <expression> (65)
        on left: 60 61
        on right: 53 55 58 59 64 99 100
    exprlist <expression> (66)
        on left: 62 63
        on right: 60 62
    objectdef <stringv> (67)
        on left: 64 65 66
        on right: 42
    indexed <stringv> (68)
        on left: 67 68
        on right: 65 68
    indexedelem <stringv> (69)
        on left: 69
        on right: 67 68
    block <unsignedv> (70)
        on left: 71
        on right: 11 78
    $@2 (71)
        on left: 70
        on right: 71
    blockk <unsignedv> (72)
        on left: 72 73
        on right: 71 72
    funcname <sym> (73)
        on left: 74 75
        on right: 76
    funcprefix <sym> (74)
        on left: 76
        on right: 79
    funcargs <sym> (75)
        on left: 77
        on right: 79
    funcbody <unsignedv> (76)
        on left: 78
        on right: 79
    funcdef <sym> (77)
        on left: 79
        on right: 12 43 55
    const <expression> (78)
        on left: 80 81 82 83 84
        on right: 44
    number <stringv> (79)
        on left: 85 86
        on right: 80
    idlist <sym> (80)
        on left: 87 88
        on right: 77
    ids <sym> (81)
        on left: 90 91
        on right: 87 90
    $@3 (82)
        on left: 89
        on right: 90
    ifstmt <stringv> (83)
        on left: 92 93
        on right: 5
    whilestart <unsignedv> (84)
        on left: 94
        on right: 96
    whilecond <unsignedv> (85)
        on left: 95
        on right: 96
    whilestmt <stringv> (86)
        on left: 96
        on right: 6
    N <unsignedv> (87)
        on left: 97
        on right: 100
    M <unsignedv> (88)
        on left: 98
        on right: 99
    forprefix <for_stmt> (89)
        on left: 99
        on right: 100
    forstmt <stringv> (90)
        on left: 100
        on right: 7
    returnstmt <expression> (91)
        on left: 101 102
        on right: 8


State 0

    0 $accept: • program $end

    error               shift, and go to state 1
    "integer constant"  shift, and go to state 2
    "real contstant"    shift, and go to state 3
    KEYWORD_IF          shift, and go to state 4
    KEYWORD_WHILE       shift, and go to state 5
    KEYWORD_FOR         shift, and go to state 6
    KEYWORD_FUNCTION    shift, and go to state 7
    KEYWORD_RETURN      shift, and go to state 8
    KEYWORD_BREAK       shift, and go to state 9
    KEYWORD_CONTINUE    shift, and go to state 10
    KEYWORD_NOT         shift, and go to state 11
    KEYWORD_LOCAL       shift, and go to state 12
    KEYWORD_TRUE        shift, and go to state 13
    KEYWORD_FALSE       shift, and go to state 14
    KEYWORD_NIL         shift, and go to state 15
    INCREMENT           shift, and go to state 16
    DECREMENT           shift, and go to state 17
    STRING              shift, and go to state 18
    IDENTIFIER          shift, and go to state 19
    LEFTBRACE           shift, and go to state 20
    LEFTBRACKET         shift, and go to state 21
    LEFTPARENTHESIS     shift, and go to state 22
    SEMICOLON           shift, and go to state 23
    DOUBLECOLON         shift, and go to state 24
    '-'                 shift, and go to state 25

    $end  reduce using rule 3 (parsing)

    program     go to state 26
    parsing     go to state 27
    stmt        go to state 28
    expr        go to state 29
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    block       go to state 37
    funcprefix  go to state 38
    funcdef     go to state 39
    const       go to state 40
    number      go to state 41
    ifstmt      go to state 42
    whilestart  go to state 43
    whilestmt   go to state 44
    forprefix   go to state 45
    forstmt     go to state 46
    returnstmt  go to state 47


State 1

   14 stmt: error • SEMICOLON

    SEMICOLON  shift, and go to state 48


State 2

   85 number: "integer constant" •

    $default  reduce using rule 85 (number)


State 3

   86 number: "real contstant" •

    $default  reduce using rule 86 (number)


State 4

   92 ifstmt: KEYWORD_IF • LEFTPARENTHESIS expr RIGHTPARENTHESIS stmt KEYWORD_ELSE stmt
   93       | KEYWORD_IF • LEFTPARENTHESIS expr RIGHTPARENTHESIS stmt

    LEFTPARENTHESIS  shift, and go to state 49


State 5

   94 whilestart: KEYWORD_WHILE •

    $default  reduce using rule 94 (whilestart)


State 6

   99 forprefix: KEYWORD_FOR • LEFTPARENTHESIS elist SEMICOLON M expr SEMICOLON

    LEFTPARENTHESIS  shift, and go to state 50


State 7

   76 funcprefix: KEYWORD_FUNCTION • funcname

    IDENTIFIER  shift, and go to state 51

    $default  reduce using rule 75 (funcname)

    funcname  go to state 52


State 8

  101 returnstmt: KEYWORD_RETURN • expr SEMICOLON
  102           | KEYWORD_RETURN • SEMICOLON

    "integer constant"  shift, and go to state 2
    "real contstant"    shift, and go to state 3
    KEYWORD_NOT         shift, and go to state 11
    KEYWORD_LOCAL       shift, and go to state 12
    KEYWORD_TRUE        shift, and go to state 13
    KEYWORD_FALSE       shift, and go to state 14
    KEYWORD_NIL         shift, and go to state 15
    INCREMENT           shift, and go to state 16
    DECREMENT           shift, and go to state 17
    STRING              shift, and go to state 18
    IDENTIFIER          shift, and go to state 19
    LEFTBRACKET         shift, and go to state 21
    LEFTPARENTHESIS     shift, and go to state 22
    SEMICOLON           shift, and go to state 53
    DOUBLECOLON         shift, and go to state 24
    '-'                 shift, and go to state 25

    expr        go to state 54
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    const       go to state 40
    number      go to state 41


State 9

    9 stmt: KEYWORD_BREAK • SEMICOLON

    SEMICOLON  shift, and go to state 55


State 10

   10 stmt: KEYWORD_CONTINUE • SEMICOLON

    SEMICOLON  shift, and go to state 56


State 11

   32 term: KEYWORD_NOT • expr

    "integer constant"  shift, and go to state 2
    "real contstant"    shift, and go to state 3
    KEYWORD_NOT         shift, and go to state 11
    KEYWORD_LOCAL       shift, and go to state 12
    KEYWORD_TRUE        shift, and go to state 13
    KEYWORD_FALSE       shift, and go to state 14
    KEYWORD_NIL         shift, and go to state 15
    INCREMENT           shift, and go to state 16
    DECREMENT           shift, and go to state 17
    STRING              shift, and go to state 18
    IDENTIFIER          shift, and go to state 19
    LEFTBRACKET         shift, and go to state 21
    LEFTPARENTHESIS     shift, and go to state 22
    DOUBLECOLON         shift, and go to state 24
    '-'                 shift, and go to state 25

    expr        go to state 57
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    const       go to state 40
    number      go to state 41


State 12

   46 lvalue: KEYWORD_LOCAL • IDENTIFIER

    IDENTIFIER  shift, and go to state 58


State 13

   83 const: KEYWORD_TRUE •

    $default  reduce using rule 83 (const)


State 14

   84 const: KEYWORD_FALSE •

    $default  reduce using rule 84 (const)


State 15

   82 const: KEYWORD_NIL •

    $default  reduce using rule 82 (const)


State 16

   33 term: INCREMENT • lvalue

    KEYWORD_LOCAL    shift, and go to state 12
    IDENTIFIER       shift, and go to state 19
    LEFTPARENTHESIS  shift, and go to state 59
    DOUBLECOLON      shift, and go to state 24

    lvalue  go to state 60
    member  go to state 34
    call    go to state 61


State 17

   35 term: DECREMENT • lvalue

    KEYWORD_LOCAL    shift, and go to state 12
    IDENTIFIER       shift, and go to state 19
    LEFTPARENTHESIS  shift, and go to state 59
    DOUBLECOLON      shift, and go to state 24

    lvalue  go to state 62
    member  go to state 34
    call    go to state 61


State 18

   81 const: STRING •

    $default  reduce using rule 81 (const)


State 19

   45 lvalue: IDENTIFIER •

    $default  reduce using rule 45 (lvalue)


State 20

   71 block: LEFTBRACE • $@2 blockk RIGHTBRACE

    $default  reduce using rule 70 ($@2)

    $@2  go to state 63


State 21

   64 objectdef: LEFTBRACKET • elist RIGHTBRACKET
   65          | LEFTBRACKET • indexed RIGHTBRACKET
   66          | LEFTBRACKET • RIGHTBRACKET

    "integer constant"  shift, and go to state 2
    "real contstant"    shift, and go to state 3
    KEYWORD_NOT         shift, and go to state 11
    KEYWORD_LOCAL       shift, and go to state 12
    KEYWORD_TRUE        shift, and go to state 13
    KEYWORD_FALSE       shift, and go to state 14
    KEYWORD_NIL         shift, and go to state 15
    INCREMENT           shift, and go to state 16
    DECREMENT           shift, and go to state 17
    STRING              shift, and go to state 18
    IDENTIFIER          shift, and go to state 19
    LEFTBRACE           shift, and go to state 64
    LEFTBRACKET         shift, and go to state 21
    RIGHTBRACKET        shift, and go to state 65
    LEFTPARENTHESIS     shift, and go to state 22
    DOUBLECOLON         shift, and go to state 24
    '-'                 shift, and go to state 25

    RIGHTBRACKET  [reduce using rule 61 (elist)]

    expr         go to state 66
    term         go to state 30
    assignexpr   go to state 31
    primary      go to state 32
    lvalue       go to state 33
    member       go to state 34
    call         go to state 35
    elist        go to state 67
    exprlist     go to state 68
    objectdef    go to state 36
    indexed      go to state 69
    indexedelem  go to state 70
    const        go to state 40
    number       go to state 41


State 22

   30 term: LEFTPARENTHESIS • expr RIGHTPARENTHESIS
   43 primary: LEFTPARENTHESIS • funcdef RIGHTPARENTHESIS
   55 call: LEFTPARENTHESIS • funcdef RIGHTPARENTHESIS LEFTPARENTHESIS elist RIGHTPARENTHESIS

    "integer constant"  shift, and go to state 2
    "real contstant"    shift, and go to state 3
    KEYWORD_FUNCTION    shift, and go to state 7
    KEYWORD_NOT         shift, and go to state 11
    KEYWORD_LOCAL       shift, and go to state 12
    KEYWORD_TRUE        shift, and go to state 13
    KEYWORD_FALSE       shift, and go to state 14
    KEYWORD_NIL         shift, and go to state 15
    INCREMENT           shift, and go to state 16
    DECREMENT           shift, and go to state 17
    STRING              shift, and go to state 18
    IDENTIFIER          shift, and go to state 19
    LEFTBRACKET         shift, and go to state 21
    LEFTPARENTHESIS     shift, and go to state 22
    DOUBLECOLON         shift, and go to state 24
    '-'                 shift, and go to state 25

    expr        go to state 71
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    funcprefix  go to state 38
    funcdef     go to state 72
    const       go to state 40
    number      go to state 41


State 23

   13 stmt: SEMICOLON •

    $default  reduce using rule 13 (stmt)


State 24

   47 lvalue: DOUBLECOLON • IDENTIFIER

    IDENTIFIER  shift, and go to state 73


State 25

   31 term: '-' • expr

    "integer constant"  shift, and go to state 2
    "real contstant"    shift, and go to state 3
    KEYWORD_NOT         shift, and go to state 11
    KEYWORD_LOCAL       shift, and go to state 12
    KEYWORD_TRUE        shift, and go to state 13
    KEYWORD_FALSE       shift, and go to state 14
    KEYWORD_NIL         shift, and go to state 15
    INCREMENT           shift, and go to state 16
    DECREMENT           shift, and go to state 17
    STRING              shift, and go to state 18
    IDENTIFIER          shift, and go to state 19
    LEFTBRACKET         shift, and go to state 21
    LEFTPARENTHESIS     shift, and go to state 22
    DOUBLECOLON         shift, and go to state 24
    '-'                 shift, and go to state 25

    expr        go to state 74
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    const       go to state 40
    number      go to state 41


State 26

    0 $accept: program • $end

    $end  shift, and go to state 75


State 27

    1 program: parsing •

    $default  reduce using rule 1 (program)


State 28

    2 parsing: stmt • parsing

    error               shift, and go to state 1
    "integer constant"  shift, and go to state 2
    "real contstant"    shift, and go to state 3
    KEYWORD_IF          shift, and go to state 4
    KEYWORD_WHILE       shift, and go to state 5
    KEYWORD_FOR         shift, and go to state 6
    KEYWORD_FUNCTION    shift, and go to state 7
    KEYWORD_RETURN      shift, and go to state 8
    KEYWORD_BREAK       shift, and go to state 9
    KEYWORD_CONTINUE    shift, and go to state 10
    KEYWORD_NOT         shift, and go to state 11
    KEYWORD_LOCAL       shift, and go to state 12
    KEYWORD_TRUE        shift, and go to state 13
    KEYWORD_FALSE       shift, and go to state 14
    KEYWORD_NIL         shift, and go to state 15
    INCREMENT           shift, and go to state 16
    DECREMENT           shift, and go to state 17
    STRING              shift, and go to state 18
    IDENTIFIER          shift, and go to state 19
    LEFTBRACE           shift, and go to state 20
    LEFTBRACKET         shift, and go to state 21
    LEFTPARENTHESIS     shift, and go to state 22
    SEMICOLON           shift, and go to state 23
    DOUBLECOLON         shift, and go to state 24
    '-'                 shift, and go to state 25

    $end  reduce using rule 3 (parsing)

    parsing     go to state 76
    stmt        go to state 28
    expr        go to state 29
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    block       go to state 37
    funcprefix  go to state 38
    funcdef     go to state 39
    const       go to state 40
    number      go to state 41
    ifstmt      go to state 42
    whilestart  go to state 43
    whilestmt   go to state 44
    forprefix   go to state 45
    forstmt     go to state 46
    returnstmt  go to state 47


State 29

    4 stmt: expr • SEMICOLON
   15 expr: expr • '+' expr
   16     | expr • '*' expr
   17     | expr • '-' expr
   18     | expr • '/' expr
   19     | expr • '%' expr
   20     | expr • GREATER expr
   21     | expr • GREATER_EQUAL expr
   22     | expr • LESS expr
   23     | expr • LESS_EQUAL expr
   24     | expr • EQUALS expr
   25     | expr • NOT_EQUAL expr
   26     | expr • KEYWORD_AND expr
   27     | expr • KEYWORD_OR expr

    KEYWORD_AND    shift, and go to state 77
    KEYWORD_OR     shift, and go to state 78
    GREATER        shift, and go to state 79
    LESS           shift, and go to state 80
    EQUALS         shift, and go to state 81
    GREATER_EQUAL  shift, and go to state 82
    LESS_EQUAL     shift, and go to state 83
    NOT_EQUAL      shift, and go to state 84
    SEMICOLON      shift, and go to state 85
    '+'            shift, and go to state 86
    '-'            shift, and go to state 87
    '*'            shift, and go to state 88
    '/'            shift, and go to state 89
    '%'            shift, and go to state 90


State 30

   29 expr: term •

    $default  reduce using rule 29 (expr)


State 31

   28 expr: assignexpr •

    $default  reduce using rule 28 (expr)


State 32

   37 term: primary •

    $default  reduce using rule 37 (term)


State 33

   34 term: lvalue • INCREMENT
   36     | lvalue • DECREMENT
   39 assignexpr: lvalue • '=' $@1 expr
   40 primary: lvalue •
   49 member: lvalue • DOT IDENTIFIER
   50       | lvalue • LEFTBRACKET expr RIGHTBRACKET
   54 call: lvalue • callsuffix

    INCREMENT        shift, and go to state 91
    DECREMENT        shift, and go to state 92
    LEFTBRACKET      shift, and go to state 93
    LEFTPARENTHESIS  shift, and go to state 94
    DOT              shift, and go to state 95
    DOUBLEDOT        shift, and go to state 96
    '='              shift, and go to state 97

    $default  reduce using rule 40 (primary)

    callsuffix  go to state 98
    normcall    go to state 99
    methodcall  go to state 100


State 34

   48 lvalue: member •

    $default  reduce using rule 48 (lvalue)


State 35

   41 primary: call •
   51 member: call • DOT IDENTIFIER
   52       | call • LEFTBRACKET expr RIGHTBRACKET
   53 call: call • LEFTPARENTHESIS elist RIGHTPARENTHESIS

    LEFTBRACKET      shift, and go to state 101
    LEFTPARENTHESIS  shift, and go to state 102
    DOT              shift, and go to state 103

    $default  reduce using rule 41 (primary)


State 36

   42 primary: objectdef •

    $default  reduce using rule 42 (primary)


State 37

   11 stmt: block •

    $default  reduce using rule 11 (stmt)


State 38

   79 funcdef: funcprefix • funcargs funcbody

    LEFTPARENTHESIS  shift, and go to state 104

    funcargs  go to state 105


State 39

   12 stmt: funcdef •

    $default  reduce using rule 12 (stmt)


State 40

   44 primary: const •

    $default  reduce using rule 44 (primary)


State 41

   80 const: number •

    $default  reduce using rule 80 (const)


State 42

    5 stmt: ifstmt •

    $default  reduce using rule 5 (stmt)


State 43

   96 whilestmt: whilestart • whilecond stmt

    LEFTPARENTHESIS  shift, and go to state 106

    whilecond  go to state 107


State 44

    6 stmt: whilestmt •

    $default  reduce using rule 6 (stmt)


State 45

  100 forstmt: forprefix • N elist RIGHTPARENTHESIS N stmt N

    $default  reduce using rule 97 (N)

    N  go to state 108


State 46

    7 stmt: forstmt •

    $default  reduce using rule 7 (stmt)


State 47

    8 stmt: returnstmt •

    $default  reduce using rule 8 (stmt)


State 48

   14 stmt: error SEMICOLON •

    $default  reduce using rule 14 (stmt)


State 49

   92 ifstmt: KEYWORD_IF LEFTPARENTHESIS • expr RIGHTPARENTHESIS stmt KEYWORD_ELSE stmt
   93       | KEYWORD_IF LEFTPARENTHESIS • expr RIGHTPARENTHESIS stmt

    "integer constant"  shift, and go to state 2
    "real contstant"    shift, and go to state 3
    KEYWORD_NOT         shift, and go to state 11
    KEYWORD_LOCAL       shift, and go to state 12
    KEYWORD_TRUE        shift, and go to state 13
    KEYWORD_FALSE       shift, and go to state 14
    KEYWORD_NIL         shift, and go to state 15
    INCREMENT           shift, and go to state 16
    DECREMENT           shift, and go to state 17
    STRING              shift, and go to state 18
    IDENTIFIER          shift, and go to state 19
    LEFTBRACKET         shift, and go to state 21
    LEFTPARENTHESIS     shift, and go to state 22
    DOUBLECOLON         shift, and go to state 24
    '-'                 shift, and go to state 25

    expr        go to state 109
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    const       go to state 40
    number      go to state 41


State 50

   99 forprefix: KEYWORD_FOR LEFTPARENTHESIS • elist SEMICOLON M expr SEMICOLON

    "integer constant"  shift, and go to state 2
    "real contstant"    shift, and go to state 3
    KEYWORD_NOT         shift, and go to state 11
    KEYWORD_LOCAL       shift, and go to state 12
    KEYWORD_TRUE        shift, and go to state 13
    KEYWORD_FALSE       shift, and go to state 14
    KEYWORD_NIL         shift, and go to state 15
    INCREMENT           shift, and go to state 16
    DECREMENT           shift, and go to state 17
    STRING              shift, and go to state 18
    IDENTIFIER          shift, and go to state 19
    LEFTBRACKET         shift, and go to state 21
    LEFTPARENTHESIS     shift, and go to state 22
    DOUBLECOLON         shift, and go to state 24
    '-'                 shift, and go to state 25

    $default  reduce using rule 61 (elist)

    expr        go to state 66
    term        go to state 30
    assignexpr  go to state 31
    primary     go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    elist       go to state 110
    exprlist    go to state 68
    objectdef   go to state 36
    const       go to state 40
    number      go to state 41


State 51

   74 funcname: IDENTIFIER •

    $default  reduce using rule 74 (funcname)


State 52

   76 funcprefix: KEYWORD_FUNCTION funcname •

    $default  reduce using rule 76 (funcprefix)


State 53

  102 returnstmt: KEYWORD_RETURN SEMICOLON •

    $default  reduce using rule 102 (returnstmt)


State 54

   15 expr: expr • '+' expr
   16     | expr • '*' expr
   17     | expr • '-' expr
   18     | expr • '/' expr
   19     | expr • '%' expr
   20     | expr • GREATER expr
   21     | expr • GREATER_EQUAL expr
   22     | expr • LESS expr
   23     | expr • LESS_EQUAL expr
   24     | expr • EQUALS expr
   25     | expr • NOT_EQUAL expr
   26     | expr • KEYWORD_AND expr
   27     | expr • KEYWORD_OR expr
  101 returnstmt: KEYWORD_RETURN expr • SEMICOLON

    KEYWORD_AND    shift, and go to state 77
    KEYWORD_OR     shift, and go to state 78
    GREATER        shift, and go to state 79
    LESS           shift, and go to state 80
    EQUALS         shift, and go to state 81
    GREATER_EQUAL  shift, and go to state 82
    LESS_EQUAL     shift, and go to state 83
    NOT_EQUAL      shift, and go to state 84
    SEMICOLON      shift, and go to state 111
    '+'            shift, and go to state 86
    '-'            shift, and go to state 87
    '*'            shift, and go to state 88
    '/'            shift, and go to state 89
    '%'            shift, and go to state 90


State 55

    9 stmt: KEYWORD_BREAK SEMICOLON •

    $default  reduce using rule 9 (stmt)


State 56

   10 stmt: KEYWORD_CONTINUE SEMICOLON •

    $default  reduce using rule 10 (stmt)


State 57

   15 expr: expr • '+' expr
   16     | expr • '*' expr
   17     | expr • '-' expr
   18     | expr • '/' expr
   19     | expr • '%' expr
   20     | expr • GREATER expr
   21     | expr • GREATER_EQUAL expr
   22     | expr • LESS expr
   23     | expr • LESS_EQUAL expr
   24     | expr • EQUALS expr
   25     | expr • NOT_EQUAL expr
   26     | expr • KEYWORD_AND expr
   27     | expr • KEYWORD_OR expr
   32 term: KEYWORD_NOT expr •

    $default  reduce using rule 32 (term)


State 58

   46 lvalue: KEYWORD_LOCAL IDENTIFIER •

    $default  reduce using rule 46 (lvalue)


State 59

   55 call: LEFTPARENTHESIS • funcdef RIGHTPARENTHESIS LEFTPARENTHESIS elist RIGHTPARENTHESIS

    KEYWORD_FUNCTION  shift, and go to state 7

    funcprefix  go to state 38
    funcdef     go to state 112


State 60

   33 term: INCREMENT lvalue •
   49 member: lvalue • DOT IDENTIFIER
   50       | lvalue • LEFTBRACKET expr RIGHTBRACKET
   54 call: lvalue • callsuffix

    LEFTBRACKET      shift, and go to state 93
    LEFTPARENTHESIS  shift, and go to state 94
    DOT              shift, and go to state 95
    DOUBLEDOT        shift, and go to state 96

    $default  reduce using rule 33 (term)

    callsuffix  go to state 98
    normcall    go to state 99
    methodcall  go to state 100


State 61

   51 member: call • DOT IDENTIFIER
   52       | call • LEFTBRACKET expr RIGHTBRACKET
   53 call: call • LEFTPARENTHESIS elist RIGHTPARENTHESIS

    LEFTBRACKET      shift, and go to state 101
    LEFTPARENTHESIS  shift, and go to state 102
    DOT              shift, and go to state 103


State 62

   35 term: DECREMENT lvalue •
   49 member: lvalue • DOT IDENTIFIER
   50       | lvalue • LEFTBRACKET expr RIGHTBRACKET
   54 call: lvalue • callsuffix

    LEFTBRACKET      shift, and go to state 93
    LEFTPARENTHESIS  shift, and go to state 94
    DOT              shift, and go to state 95
    DOUBLEDOT        shift, and go to state 96

    $default  reduce using rule 35 (term)

    callsuffix  go to state 98
    normcall    go to state 99
    methodcall  go to state 100


State 63

   71 block: LEFTBRACE $@2 • blockk RIGHTBRACE

    error               shift, and go to state 1
    "integer constant"  shift, and go to state 2
    "real contstant"    shift, and go to state 3
    KEYWORD_IF          shift, and go to state 4
    KEYWORD_WHILE       shift, and go to state 5
    KEYWORD_FOR         shift, and go to state 6
    KEYWORD_FUNCTION    shift, and go to state 7
    KEYWORD_RETURN      shift, and go to state 8
    KEYWORD_BREAK       shift, and go to state 9
    KEYWORD_CONTINUE    shift, and go to state 10
    KEYWORD_NOT         shift, and go to state 11
    KEYWORD_LOCAL       shift, and go to state 12
    KEYWORD_TRUE        shift, and go to state 13
    KEYWORD_FALSE       shift, and go to state 14
    KEYWORD_NIL         shift, and go to state 15
    INCREMENT           shift, and go to state 16
    DECREMENT           shift, and go to state 17
    STRING              shift, and go to state 18
    IDENTIFIER          shift, and go to state 19
    LEFTBRACE           shift, and go to state 20
    LEFTBRACKET         shift, and go to state 21
    LEFTPARENTHESIS     shift, and go to state 22
    SEMICOLON           shift, and go to state 23
    DOUBLECOLON         shift, and go to state 24
    '-'                 shift, and go to state 25
